--- a/react-project-accordions/src/Components/Card/card.css
+++ b/react-project-accordions/src/Components/Card/card.css
@@ -1,42 +1,31 @@
-*,
-*::after,
-*::before {
-    margin: 0;
-    padding: 0;
-}
-
-html {
-    font-size: 16px;
-}
-
-body {
-    font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
-    background-color: #4b145b;
-    color: #102a42;
-    height: 100vh;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-}
-
 .app {
     background-color: white;
     display: grid;
     grid-template-columns: 1fr 2fr;
-    width: 90vw;
+    width: 50vw;
     padding: 30px;
     grid-column-gap: 30px;
 
 }
 
 .card {
-    padding: 16px 24px;
-    border: 2px solid #eae6eb;
-    border-radius: 4px;
-    box-shadow: 0 5px 15px rgba(0, 0, 0, .1);
+
     display: flex;
     justify-content: space-between;
     align-items: center;
+}
+.card p{
+        color: #324d67;
+        margin-top: 8px;
+        font-size: 1rem;
+}
+.card-box{
+    display: flex;
+    flex-direction: column;
+        padding: 16px 24px;
+        border: 2px solid #eae6eb;
+        border-radius: 4px;
+        box-shadow: 0 5px 15px rgba(0, 0, 0, .1);
 }
 
 .card-container {
@@ -45,6 +34,7 @@ body {
     justify-content: center;
     align-items: center;
     grid-template-columns: 1fr;
+    grid-row-gap: 30px;
 }
 
 h4 {
@@ -52,23 +42,8 @@ h4 {
     text-transform: capitalize;
     line-height: 1.25;
     font-size: 1rem;
-        letter-spacing: 0.1rem;
-
-}
-
-.text-container {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-}
-
-h3 {
-    line-height: 1.2;
-    font-weight: 500;
-    font-size: 1.75rem;
     letter-spacing: 0.1rem;
-    text-transform: capitalize;
-    line-height: 1.25;
+
 }
 
 .icon-circle {
